# chip8

./: CMakeLists.txt  README.md  chip8_config.ini
database/: README.md
include/: chip8.h  io_chip8.h
src/: chip8.c  main.c  main.cpp
